# EXRA-network

./: .gitattributes  .gitignore  AGENTS.md  AUDIT_MARKETPLACE_v2.4.1.md  DEPLOY.bat  EXRA Tokenomics Architecture v2.0_ PEAQ DePIN (Sec.md  FRONTEND_FIX_PLAN.md  FRONTEND_QUALITY_ASSURANCE.md  FRONTEND_QUICK_FIXES.md  FRONTEND_SECURITY_AUDIT.md  MASTER_PLAN.md  Node Map.html  deploy.sh  docker-compose.yml  exra-auth.html  exra-landing.html  exra-marketplace.html  exra-token.html  exra_mobile_screens.html  exra_tma_design.html  🚀 EXRA Marketplace Architecture v2.1_ DePIN Proxy_.md
.branch-audit/go-cache-bold/: trim.txt
.branch-audit/go-cache-current/: trim.txt
.branch-audit/go-cache-happy/: trim.txt
.branch-audit/go-cache-main/: trim.txt
android/: AndroidManifest.xml  PROD_READINESS.md  README.md  build.gradle  compile_errors.txt  compile_errors_v2.txt  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
cmd/simulator/: go.mod  main.go
dashboard/: Dockerfile  README.md  build_log.txt  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  landing.css  layout.tsx  page.tsx  styles.css
dashboard/components/: CsrfTokenProvider.tsx  LavaHero.tsx  LiveMap.css  LiveMap.tsx  ProxyGuide.tsx  UsageChart.tsx
dashboard/lib/: api.ts  auditLog.ts  buyerApi.ts  csrf.ts  rateLimit.ts  supabase.ts  tmaAuth.ts
deploy/: auto-deploy.py  auto-deploy.sh  build-and-deploy-server.sh  build-server.ps1  build-server.py  build.sh  check-binary.py  check-landing-structure.py  check-marketplace-files.py  check-nginx-configs.py  check-server-status.txt  check-server.py  check-tma-issue.py  deploy-landing-built.py  deploy-landing-simple.py  deploy-landing.py  detect-server-arch.py  env.sample  final-check.py  fix-build-final.py  fix-nginx.py  fix-server-binary.sh  fix-tma-env.py  fix-tma-manual-commands.txt  fix-tma-production.sh  fix-tma-quick.py  fix-tma-with-password.sh  install-react-deps.py  rebuild-landing.py  rebuild-with-deps.py  server-deploy.sh  update-nginx-config.py  verify-endpoints.py
desktop/: config.go  config.json  go.mod  go.sum  hardware.go  main.go  tunnel.go  worker.go
docs/: ADMIN_V1_SPEC.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  EXRA_MASTER_PLAN.md  IMPLEMENTATION_SPEC_V1.md  PALLET_EXRA_V2_4_1_SPEC.md  PEAQ_RUNTIME_INTEGRATION.md  PROTOCOL_ECONOMY_SPEC.md  README.md  REALITY_AUDIT_2026-04-23.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SMOKE_TESTS.md  TMA_ISSUE_DIAGNOSIS.md  TMA_MARKETPLACE_HARDENING_PLAN.md  TON_POLICY_LOCK.md  economy.md  payout-logic.md
docs/archive/: MIGRATIONS.md  PRODUCT_AUDIT_2026-04.md  ROADMAP.md  TOKENOMICS.md  audit_results.md
gateway/: Cargo.toml
gateway/src/: main.rs
landing/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: animated.tsx  download-section.tsx  earnings.tsx  features.tsx  final-cta.tsx  footer.tsx  for-buyers.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  tokenomics.tsx  waitlist-section.tsx  whitepaper-content.tsx  world-map.tsx
migrations/: 017_gas_pool.sql  018_pools.sql  019_anti_fraud.sql  020_worker_listings.sql  021_tma_sybil_ip.sql  022_waitlist.sql
peaq/pallets/exra/: Cargo.toml  final_errors.txt  test_output.txt
peaq/pallets/exra/src/: lib.rs  mock.rs  tests.rs  types.rs
peaq/runtime/: Cargo.toml
peaq/runtime/src/: lib.rs  tests.rs
server/: .kilonet_id  Dockerfile  Makefile  RUNBOOK.md  control_plane.go  go.mod  go.sum  main.go  production.env.example
server/config/: config.go
server/db/: db.go
server/gateway/: auth.go  billing.go  bridge.go  main.go  sessions.go  stitch_test.go  test_setup_test.go
server/gwclaims/: gwclaims.go
server/handlers/: admin.go  admin_markpaid_test.go  api.go  buyer.go  buyer_test.go  compute.go  health.go  ws.go  (+20 more)
(+10873 files in other folders)
